# remax_kb

./: .gitignore  README.md  SPEC.md  SPEC_v2.md  pyproject.toml  requirements-build.txt  requirements-runtime.txt
.github/workflows/: test.yml
bench/: RESULTS.md  RESULTS_q4_official_vs_ours.md  bench_codecs.py  bench_q4_official_vs_ours.py
examples/: build_claude_docs_kb.py
examples/tiny_corpus/: README.md  federalist_10_factions.txt  federalist_10_property.txt  federalist_51_checks.txt  gettysburg.txt
js/: kb-reader.js
remax_kb/: __init__.py  _hamming.py  cli.py  embedders.py  formats.py  handlers.py  manifest.py  migrate.py  pack.py  pack_v2.py  projection.py  read.py  read_v2.py  rotations.py
scripts/: build_q4_onnx.py  pack_demo.py  query_demo.py
skill/: SKILL.md  search.py
tests/: test_cli.py  test_cli_sync.py  test_compaction_policy.py  test_demo_kb_builder.py  test_directory_pack.py  test_gemini.py  test_gemini_live.py  test_hamming.py  test_int8_rotations.py  test_js_reader_compat.py  test_migrate.py  test_pack_v2.py  test_pack_v2_remex.py  test_projection.py  test_q4_embedder.py  test_q4_official_default.py  test_remex_codec.py  test_retrieval.py  test_roundtrip.py  test_srht.py  test_sync.py
