[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remax_kb"
version = "0.4.0"
description = "Portable 1-bit binary embedding knowledgebase format (.kb) — packer + reader + Claude skill."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Oskar Austegard"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "bm25s>=0.2",          # read_v2 imports it at module load (v2 BM25 fusion)
    "remax @ git+https://github.com/oaustegard/remax.git",
]

[project.optional-dependencies]
build = [
    "torch",
    "transformers",
    "sentence-transformers",
    "peft",
    "safetensors",
    "huggingface_hub",
]
runtime = [
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
]
# Optional file handlers for the directory packer. Pure-python, light.
handlers = [
    "beautifulsoup4>=4.11",
    "pypdf>=4.0",
]
# Hosted API embedders (Google Gemini, etc.)
api = [
    "httpx>=0.25",
]
# Optional multi-bit remex codec (rotation + Lloyd-Max scalar quant).
# numpy+scipy only — scipy is already a core dep, so this is light.
remex = [
    "remex @ git+https://github.com/oaustegard/remex.git",
]
dev = ["pytest>=7.0", "beautifulsoup4>=4.11", "pypdf>=4.0", "httpx>=0.25",
       "remex @ git+https://github.com/oaustegard/remex.git"]

[project.scripts]
remax-kb = "remax_kb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["remax_kb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/oaustegard/remax_kb"
Repository = "https://github.com/oaustegard/remax_kb"
Issues = "https://github.com/oaustegard/remax_kb/issues"
Spec = "https://github.com/oaustegard/remax_kb/blob/main/SPEC.md"
